--- a/Rileysoft.ShiftJIS/Rileysoft.ShiftJIS/Rileysoft.ShiftJIS.csproj
+++ b/Rileysoft.ShiftJIS/Rileysoft.ShiftJIS/Rileysoft.ShiftJIS.csproj
@@ -4,6 +4,36 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AssemblyName>$(MSBuildProjectName)</AssemblyName>
+    <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <PackageId>Rileysoft.ShiftJIS</PackageId>
+    <Title>Rileysoft.ShiftJIS</Title>
+    <Version>1.0.0</Version>
+    <Authors>i-am-Riley</Authors>
+    <Company>i-am-Riley</Company>
+    <PackageProjectUrl>https://github.com/i-am-Riley/shift_jis</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/i-am-Riley/shift_jis</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>encoding</PackageTags>
+    <PackageReleaseNotes>Ported from Rileysoft.DotHack</PackageReleaseNotes>
+    <PackageLicenseExpression>mit</PackageLicenseExpression>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>embedded</DebugType>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>embedded</DebugType>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
