--- a/Rileysoft.ShiftJIS/Rileysoft.ShiftJIS/Rileysoft.ShiftJIS.csproj
+++ b/Rileysoft.ShiftJIS/Rileysoft.ShiftJIS/Rileysoft.ShiftJIS.csproj
@@ -18,7 +18,7 @@
     <RepositoryType>git</RepositoryType>
     <PackageTags>encoding</PackageTags>
     <PackageReleaseNotes>Ported from Rileysoft.DotHack</PackageReleaseNotes>
-    <PackageLicenseExpression>mit</PackageLicenseExpression>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
